fix: fixed overflow issue for - made content scrollable for comment modal.

--- a/client/src/styling/main.css
+++ b/client/src/styling/main.css
@@ -232,20 +232,21 @@ body {
 
 .comment-modal {
     position: absolute;
-    top: 5%;
+    top: 2%;
     /* Adjust as needed to create space at the top */
     left: 50%;
     transform: translateX(-50%);
-    width: 45%;
+    width: 48%;
     /* background-color: #fff; */
     /* Assuming 'background.paper' refers to white color */
     box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.5);
     /* Adjust shadow as needed */
     /* padding: 18px; */
     /* Adjust according to your design (4 units, assuming 1 unit = 4px) */
-    height: 90vh;
+    height: 96vh;
     /* 90% of the viewport height */
     border-radius: 5px;
+    overflow: scroll;
 }
 
 .clearfix::after {
@@ -279,4 +280,12 @@ body {
     height: 100px;
     overflow: scroll;
     /* border: 1px solid #ccc; */
+}
+
+#light .modal-header {
+    background-color: var(--light-icon);
+}
+
+#dark .modal-header {
+    background-color: var(--dark-icon);
 }
